--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <meta name="current-user-id" content="{{ current_user.id if current_user.is_authenticated else '' }}">
 <title>
     {% block title %}
