--- a/application/templates/admin/admindash.html
+++ b/application/templates/admin/admindash.html
@@ -1,5 +1,5 @@
 {% extends "adminslayout.html" %}
-{% block title %}Admin DashBoard - MediCart {% endblock %}
+{% block title %}Admin DashBoard - SmartEats {% endblock %}
 {% block content %}
 
         <!-- Content Wrapper -->
