--- a/application/templates/store/updated_updateproduct.html
+++ b/application/templates/store/updated_updateproduct.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} update product - MediCart {% endblock %}
+{% block title %}{{store.name}} update product - SmartEats {% endblock %}
 {% block content %}
 
 <div class="container">
